--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            it.buildConfigField 'String', "DEFAULT_CHANNEL_ID", DEFAULT_CHANNEL_ID
+        }
+        buildTypes.each {
+            it.buildConfigField 'String', "DEFAULT_CHANNEL_ID", DEFAULT_CHANNEL_ID
         }
     }
 }
